@@ -1,0 +1,89 @@
+/*
+ * Copyright 2002-2016 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.test.context.cache;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+
+import org.springframework.core.SpringProperties;
+
+import static org.junit.Assert.*;
+import static org.springframework.test.context.cache.ContextCacheUtils.*;
+import static org.springframework.test.context.cache.ContextCache.*;
+
+/**
+ * Unit tests for {@link ContextCacheUtils}.
+ *
+ * @author Sam Brannen
+ * @since 4.3
+ */
+public class ContextCacheUtilsTests {
+
+	@Before
+	@After
+	public void clearProperties() {
+		System.clearProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME);
+		SpringProperties.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, null);
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromDefault() {
+		assertDefaultValue();
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromBogusSystemProperty() {
+		System.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "bogus");
+		assertDefaultValue();
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromBogusSpringProperty() {
+		SpringProperties.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "bogus");
+		assertDefaultValue();
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromDecimalSpringProperty() {
+		SpringProperties.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "3.14");
+		assertDefaultValue();
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromSystemProperty() {
+		System.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "42");
+		assertEquals(42, retrieveMaxCacheSize());
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromSystemPropertyContainingWhitespace() {
+		System.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "42\t");
+		assertEquals(42, retrieveMaxCacheSize());
+	}
+
+	@Test
+	public void retrieveMaxCacheSizeFromSpringProperty() {
+		SpringProperties.setProperty(MAX_CONTEXT_CACHE_SIZE_PROPERTY_NAME, "99");
+		assertEquals(99, retrieveMaxCacheSize());
+	}
+
+	private static void assertDefaultValue() {
+		assertEquals(DEFAULT_MAX_CONTEXT_CACHE_SIZE, retrieveMaxCacheSize());
+	}
+
+}
